SET(WT_PROJECT_SOURCE
main.cc
)

SET(WT_PROJECT_TARGET dcmqrdb.wt)
SET(WT_HOME ~/devel/wt)


LINK_DIRECTORIES( ${WT_HOME}/build/src ${WT_HOME}/build/src/http)

ADD_EXECUTABLE(${WT_PROJECT_TARGET} ${WT_PROJECT_SOURCE})

INCLUDE_DIRECTORIES(${WT_HOME}/src)
INCLUDE_DIRECTORIES(${WT_HOME}/build)

TARGET_LINK_LIBRARIES(${WT_PROJECT_TARGET} ${WT_CONNECTOR} wt)
